src/test/deca/syntax/valid/return-oneClassWithOneMethod.deca
class A {
    int nombreDeCartePokemon(){
        return a;
    }
}