src/test/deca/syntax/invalid/class-beforeClass.deca
class A {
    B b  = new B()}

class B{}


